vlib/v/checker/tests/array_index_args_err.out
vlib/v/checker/tests/array_index_args_err.vv:3:23: error: cannot use `[]int` as `int` in argument 1 to `.index()`
    1 | fn main() {
    2 |     arr := [0]
    3 |     mut ret := [0].index([0])
      |                          ~~~
    4 |     ret = [0].index()
    5 |     ret = [0, 1, 2].index(0, 1, 2)
vlib/v/checker/tests/array_index_args_err.vv:4:12: error: `.index()` expected 1 argument, but got 0
    2 |     arr := [0]
    3 |     mut ret := [0].index([0])
    4 |     ret = [0].index()
      |               ~~~~~~~
    5 |     ret = [0, 1, 2].index(0, 1, 2)
    6 |     ret = [0].index('a')
vlib/v/checker/tests/array_index_args_err.vv:5:18: error: `.index()` expected 1 argument, but got 3
    3 |     mut ret := [0].index([0])
    4 |     ret = [0].index()
    5 |     ret = [0, 1, 2].index(0, 1, 2)
      |                     ~~~~~~~~~~~~~~
    6 |     ret = [0].index('a')
    7 |     ret = [0].index(arr)
vlib/v/checker/tests/array_index_args_err.vv:6:18: error: cannot use `string` as `int` in argument 1 to `.index()`
    4 |     ret = [0].index()
    5 |     ret = [0, 1, 2].index(0, 1, 2)
    6 |     ret = [0].index('a')
      |                     ~~~
    7 |     ret = [0].index(arr)
    8 |     println(ret)
vlib/v/checker/tests/array_index_args_err.vv:7:18: error: cannot use `[]int` as `int` in argument 1 to `.index()`
    5 |     ret = [0, 1, 2].index(0, 1, 2)
    6 |     ret = [0].index('a')
    7 |     ret = [0].index(arr)
      |                     ~~~
    8 |     println(ret)
    9 | }
